--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -34,7 +34,7 @@ twentytwenty:
   date: 2020-01-30
   year: 2020
   place: The Journal of New Librarianship, 5(1)
-  url: https://www.newlibs.org/article/11757-the-wi-re-way-a-manifesto-and-a-process-for-learner-led-design
+  url: https://newlibs.org/index.php/jonl/article/view/703
   fa-icon: fas fa-file-alt
 - title: "Writing a Literature Review—May 2020 Site of the Month Interview"
   authors: 
