--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -47,7 +47,7 @@ twentytwenty:
   date: 2020-01-30
   year: 2020
   place: The Journal of New Librarianship, 5(1)
-  url: https://newlibs.org/index.php/jonl/article/view/703
+  url: https://doi.org/10.33011/newlibs/9/23
   fa-icon: fas fa-file-alt
 - title: "Writing a Literature Review—May 2020 Site of the Month Interview"
   authors: 
