--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,3 +1,18 @@
+twentytwentyone:
+- title: "Scenarios for Success: Building High-Impact Library Collaborations"
+  authors: 
+    - Gayle R. Schaub
+    - Hazel A. McClure
+    - doug-worsham
+    - Caitlin Richardson
+  type: Poster Presentation
+  date: 2021-02-11
+  year: 2021
+  place: AAC&U’s 2021 Virtual Conference on General Education, Pedagogy, and Assessment
+  url: https://www.eventscribe.com/2021/gepa/fsPopup.asp?Mode=posterinfo&PosterID=344787
+  fa-icon: fas fa-images
+
+
 twentytwenty:
 - title: "Three Interactive Workshops—October 2020 Site of the Month Interview"
   authors: 
