--- a/_data/stats.yml
+++ b/_data/stats.yml
@@ -1,9 +1,9 @@
 workshops:
-    number: 6461
-    last-updated: 2020-12-17
+    number: 8063
+    last-updated: 2021-03-17
 youtube:
-    number: 211.5K
-    last-updated: 2020-12-17
+    number: 235K
+    last-updated: 2021-03-17
 website:
-    number: 267K
-    last-updated: 2020-12-17
+    number: 296k
+    last-updated: 2021-03-17
