--- a/_data/glossary.yml
+++ b/_data/glossary.yml
@@ -144,7 +144,7 @@
   reference: https://en.wikipedia.org/wiki/Intersectionality
 
 - term: "Life History"
-  definition: "A record of an event/events in a respondent's life told (written down, but increasingly audio or video recorded) by the respondent from his/her own perspective in his/her own words. A life history is different from a "research story" in that it covers a longer time span, perhaps a complete life, or a significant period in a life."
+  definition: "A record of an event/events in a respondent's life told (written down, but increasingly audio or video recorded) by the respondent from his/her own perspective in his/her own words. A life history is different from a 'research story' in that it covers a longer time span, perhaps a complete life, or a significant period in a life."
   reference: https://libguides.usc.edu/writingguide/researchglossary
 
 - term: "Literature review"
