fix glossary typo

--- a/_data/glossary.yml
+++ b/_data/glossary.yml
@@ -240,7 +240,7 @@
            <p class="mt-0 mb-0"><a href="https://ugs.utexas.edu/our/poster/samples" target="_blank"><i>Check out these helpful examples of undergraduate research posters from UT Austin!</i></a></p>
 
 - term: "Sample"
-  definition: "The population researched in a particular study. Usually, attempts are made to select a "sample population" that is considered representative of groups of people to whom results will be generalized or transferred. In studies that use inferential statistics to analyze results or which are designed to be generalizable, sample size is critical, generally the larger the number in the sample, the higher the likelihood of a representative distribution of the population."
+  definition: "The population researched in a particular study. Usually, attempts are made to select a 'sample population' that is considered representative of groups of people to whom results will be generalized or transferred. In studies that use inferential statistics to analyze results or which are designed to be generalizable, sample size is critical, generally the larger the number in the sample, the higher the likelihood of a representative distribution of the population."
   reference: https://libguides.usc.edu/writingguide/researchglossary
   
 - term: "Secondary sources"
