--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,4 +1,14 @@
 twentytwentyone:
+- title: "Creative and Logical: 10 STEM Fields That Make the Best of Both Worlds"
+  authors: 
+    - Kassidy Zhang
+  type: interview
+  date: 2021-04-21
+  year: 2021
+  place: College Magazine
+  url: https://www.collegemagazine.com/creative-and-logical-10-stem-fields-that-make-the-best-of-both-worlds/
+  fa-icon: fas fa-comments
+
 - title: "Scenarios for Success: Building High-Impact Library Collaborations"
   authors: 
     - Gayle R. Schaub
